# SBTB

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml  vercel.json
backend/: Dockerfile  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_passwordless_otp.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: addresses.py  admin.py  auth.py  cart.py  checkout.py  orders.py  payments.py  products.py  router.py  settings.py
backend/app/cli/: bootstrap.py
backend/app/core/: config.py  logging.py  rate_limit.py  redis.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  address.py  audit.py  cart.py  catalog.py  enums.py  inventory.py  order.py  payment.py  settings.py  user.py
backend/app/schemas/: auth.py  catalog.py  common.py
backend/app/services/: auth.py  cart.py  catalog.py  checkout.py  email.py  otp.py  payments.py  storage.py
backend/app/tasks/: celery_app.py  jobs.py
backend/tests/: conftest.py  test_cart_pricing.py  test_health_auth.py  test_payment_transitions.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
frontend/e2e/: README.md
frontend/public/: sitemap.xml
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAuth.tsx  useCountdown.ts  useDocumentTitle.ts
frontend/src/layouts/: AdminLayout.tsx  AuthLayout.tsx  StoreLayout.tsx
frontend/src/lib/: utils.ts
infra/nginx/: nginx.conf
scripts/: dev.sh
(+52 files in other folders)
